<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.outboxit.autos504.MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edtLicense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:hint="@string/license"
            android:inputType="textCapCharacters"
            android:maxLength="7" />

        <Button
            android:id="@+id/btnSendRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/send_request" />

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblMaker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maker"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/lblMakerVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/lblColorVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblPeriod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/period"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/lblPeriodVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2014" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblDEI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dei"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/lblDEIVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.00" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblMunicipal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/municipal"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/lblMunicipalVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.00" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/lblTotalVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.00" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSendReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/send_report"
        android:visibility="invisible" />

</RelativeLayout>